# PyPerceptron

./: .gitignore  PyPerceptron.py  README.md  load_data.py  main.ipynb  main.py  pyproject.toml  requirements.txt
PyPerceptron/: layers.py  network.py  utils.py
examples/MNIST Handwritten Digits/: load_data.py  recognize_digits.py
examples/MNIST Handwritten Digits/Input/train-images-idx3-ubyte/: train-images-idx3-ubyte:Zone.Identifier
