[tool.poetry]
name = "pyperceptron"
version = "0.1.0"
description = "A Python implementation of a multi-layer perceptron designed to recognize handwritten digits."
authors = ["Siddharth Radhakrishnan <siddharth.radh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
